homeworks/denyscherep/module-03/lesson-08/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  selector:
    app: course-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
