homeworks/denyscherep/module-03/lesson-08/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  rules:
    - host: course-app.local  # Доменне ім'я
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-service
                port:
                  number: 80
